--- a/requirements.txt
+++ b/requirements.txt
@@ -1,206 +1,75 @@
-absl-py==1.0.0
-addict==2.4.0
 aiohttp==3.8.3
 aiosignal==1.3.1
-albumentations==1.3.0
 anyio==3.6.2
 appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
-astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.2.0
-backcall==0.2.0
 beautifulsoup4==4.11.1
-bleach==5.0.1
-cachetools==5.0.0
 certifi==2022.12.7
 cffi==1.15.1
-charset-normalizer==2.0.12
+charset-normalizer==2.1.1
 click==8.1.3
 clikit==0.6.2
-cmdstanpy==0.9.68
-contourpy==1.0.7
+cmdstanpy==1.1.0
+colorama==0.4.6
 convertdate==2.4.0
 crashtest==0.3.1
 cryptography==39.0.0
 cycler==0.11.0
-Cython==0.29.32
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-easydict==1.10
-editdistance==0.6.0
-emoji==0.6.0
 ephem==4.1.4
-executing==1.1.1
-fast_ctc_decode==0.3.2
 fastapi==0.89.1
-fastjsonschema==2.16.2
-flatbuffers==2.0
 fonttools==4.38.0
 frozendict==2.3.4
 frozenlist==1.3.3
-gast==0.5.3
-google-auth==2.6.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-graphviz==0.20.1
-grpcio==1.44.0
 h11==0.14.0
-h5py==3.6.0
 hijri-converter==2.2.4
 holidays==0.18
 html5lib==1.1
 httpstan==4.9.1
-huggingface-hub==0.10.1
-hyperopt==0.1.2
 idna==3.4
-imageio==2.18.0
-imgaug==0.4.0
-importlib-metadata==4.11.1
-importlib-resources==5.10.0
-ipykernel==6.16.2
-ipython-genutils==0.2.0
-ipywidgets==8.0.2
-jedi==0.18.1
-Jinja2==3.1.2
 joblib==1.2.0
-jsonschema==4.16.0
-jstyleson==0.0.2
-jupyter==1.0.0
-jupyter_client==7.4.4
-jupyter-console==6.4.4
-jupyter_core==4.11.2
-jupyter-server==1.21.0
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
-keras==2.8.0
-Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 korean-lunar-calendar==0.3.1
-libclang==13.0.0
 LunarCalendar==0.0.9
 lxml==4.9.2
-Markdown==3.3.6
-MarkupSafe==2.1.1
 marshmallow==3.19.0
-matplotlib==3.6.3
-matplotlib-inline==0.1.6
-mistune==2.0.4
+matplotlib==3.5.3
 multidict==6.0.4
 multitasking==0.0.11
-nbclassic==0.4.5
-nbclient==0.7.0
-nbconvert==7.2.3
-nbformat==5.7.0
-nest-asyncio==1.5.6
-networkx==2.8
-nibabel==3.2.2
-ninja==1.11.1
-nltk==3.7
-notebook==6.5.1
-notebook_shim==0.2.0
+munkres==1.1.4
 numpy==1.24.1
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-onnx==1.11.0
-opencv-python==4.5.5.62
-opencv-python-headless==4.6.0.66
-openvino-dev==2021.4.2
-opt-einsum==3.3.0
+olefile==0.46
 packaging==23.0
 pandas==1.5.3
-pandocfilters==1.5.0
-parasail==1.2.4
-parso==0.8.3
 pastel==0.2.1
-pickleshare==0.7.5
-Pillow==9.4.0
+Pillow==8.3.2
 pip==22.3.1
-pkgutil_resolve_name==1.3.10
 plotly==5.13.0
-progress==1.6
-prometheus-client==0.15.0
-prompt-toolkit==3.0.31
-prophet==1.0
-protobuf==3.19.4
-psutil==5.9.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py-cpuinfo==8.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+prophet==1.1.2
 pycparser==2.21
 pydantic==1.10.4
-pydicom==2.3.0
-Pygments==2.13.0
 pylev==1.4.0
 PyMeeus==0.5.12
-pymongo==4.1.1
 pyparsing==3.0.9
-pyrsistent==0.18.1
 pysimdjson==5.0.2
-pystan==2.19.1.1
+pystan==3.6.0
 python-dateutil==2.8.2
 pytz==2022.7.1
-PyWavelets==1.3.0
-PyYAML==6.0
-pyzmq==24.0.1
-qtconsole==5.3.2
-QtPy==2.2.1
-qudida==0.0.4
-rawpy==0.17.1
-regex==2022.4.24
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-scikit-image==0.19.2
-scipy==1.5.4
-Send2Trash==1.8.0
-sentencepiece==0.1.96
+requests==2.28.2
 setuptools==65.6.3
-setuptools-git==1.2
-Shapely==1.8.1.post1
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
-stack-data==0.5.1
 starlette==0.22.0
 tenacity==8.1.0
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-io-gcs-filesystem==0.24.0
-termcolor==1.1.0
-terminado==0.17.0
-texttable==1.6.4
-tf-estimator-nightly==2.8.0.dev2021122109
-tifffile==2022.4.26
-tinycss2==1.2.1
-tokenizers==0.12.1
-torch==1.11.0
-torchvision==0.12.0
-tornado==6.2
 tqdm==4.64.1
-traitlets==5.5.0
 typing_extensions==4.4.0
-ujson==5.7.0
+unicodedata2==15.0.0
 urllib3==1.26.14
 uvicorn==0.20.0
-wcwidth==0.2.5
 webargs==8.2.0
 webencodings==0.5.1
-websocket-client==1.4.1
-Werkzeug==2.0.3
 wheel==0.37.1
-widgetsnbextension==4.0.3
-wrapt==1.13.3
-yamlloader==1.1.0
 yarl==1.8.2
 yfinance==0.2.9
-zipp==3.7.0
+
